Add additional entries to .gitignore for Python, Poetry, Nox, and system files to improve project cleanliness and prevent unnecessary files from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ venv/
 # IDEs
 .idea/
 .vscode/
+# Python
+__pycache__/
+*.py[cod]
+.build/
+dist/
+
+# Poetry
+.venv/
+poetry.lock
+
+# Nox
+.nox/
+
+# Docs
+/docs/build/
+/docs/source/generated/
+
+# System
+.DS_Store
+.vscode/
+.idea/
