--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,33 @@
-# .readthedocs.yml
-version: 2
+# .github/workflows/release.yml
+name: Publish Python Package
 
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.12"
-  jobs:
-    pre_install:
-      - pip install poetry
-    install:
-      - poetry install --with docs
+on:
+  push:
+    tags:
+      - 'v*.*.*'  # trigger ONLY on version tags like v0.1.0
 
-sphinx:
-  configuration: docs/source/conf.py
+jobs:
+  publish:
+    name: Build and Publish to PyPI
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Poetry
+        run: |
+          pip install poetry
+
+      - name: Configure Poetry
+        run: |
+          poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Build and Publish
+        run: |
+          poetry publish --build
