--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,15 +1,14 @@
-# .readthedocs.yml
 version: 2
 
 build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  jobs:
-    pre_install:
-      - pip install poetry
-    install:
-      - poetry install --with docs
+
+python:
+  install:
+    - method: poetry
+      extras: ["docs"]
 
 sphinx:
   configuration: docs/source/conf.py
