--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,3 +1,4 @@
+# .readthedocs.yaml
 version: 2
 
 build:
@@ -7,8 +8,14 @@ build:
 
 python:
   install:
+    - method: pip
+      path: .
     - method: poetry
-      extras: ["docs"]
+      with-project: true
+
+  # override the install command to use poetry groups properly
+  install-command: |
+    poetry install --no-root --with docs
 
 sphinx:
   configuration: docs/source/conf.py
