--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,4 +1,3 @@
-# .readthedocs.yaml
 version: 2
 
 build:
@@ -8,14 +7,9 @@ build:
 
 python:
   install:
-    - method: pip
-      path: .
     - method: poetry
-      with-project: true
-
-  # override the install command to use poetry groups properly
-  install-command: |
-    poetry install --no-root --with docs
+      path: .   # <--- This is the critical missing piece
+      extras: ["docs"]
 
 sphinx:
   configuration: docs/source/conf.py
