--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,21 +4,18 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-
-python:
-  install:
-    - method: pip
-      path: .
-    - requirements: docs/requirements.txt
-
-  system_packages: true
-
-build:
   jobs:
     pre_build:
       - pip install nox
     build:
       - nox -s docs
 
+python:
+  install:
+    - method: pip
+      path: .
+    - requirements: docs/requirements.txt
+  system_packages: true
+
 sphinx:
-  configuration: docs/source/conf.py  # still needed for RTD to register this project
+  configuration: docs/source/conf.py
