--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,14 +5,14 @@ build:
   tools:
     python: "3.12"
   jobs:
-    build: html  # default RTD HTML build
+    build:
+      html: []
 
 python:
   install:
     - method: pip
       path: .
     - requirements: docs/requirements.txt
-  system_packages: true
 
 sphinx:
   configuration: docs/source/conf.py
